Support SPECIES_128